--- a/css/responsive-menu.css
+++ b/css/responsive-menu.css
@@ -1,236 +1,301 @@
 
-/* # Responsive Menu
----------------------------------------------------------------------------------------------------- */
+.genesis-responsive-menu .genesis-nav-menu .sub-menu,
+.genesis-responsive-menu .genesis-nav-menu .sub-menu a,
+.site-header .widget-area {
+	width: 100%;
+}
 
-.genesis-nav-menu li,
-.site-header ul.genesis-nav-menu {
-  float: none;
+
+.genesis-nav-menu li  {
+	float: none;
 }
 
 .genesis-nav-menu {
-  text-align: center;
+	text-align: center;
 }
 
-.js nav.nav-primary,
-.js .site-header nav  {
+/* ### Genesis Responsive Menus */
+
+.genesis-responsive-menu .wrap {
+	padding: 0;
+}
+
+.genesis-responsive-menu {
 	display: none;
 	position: relative;
 }
 
-.js .site-header nav .wrap {
-	padding: 0;
+.genesis-skip-link .skip-link-hidden {
+	display: none;
+	visibility: hidden;
 }
 
-.js nav.pagination {
+.menu-toggle,
+.sub-menu-toggle {
+	background-color: #fff;
+	border-width: 0;
+	color: #333;
 	display: block;
+	margin: 0 auto;
+	overflow: hidden;
+	text-align: center;
+	visibility: visible;
+}
+
+.menu-toggle:focus,
+.menu-toggle:hover,
+.sub-menu-toggle:focus,
+.sub-menu-toggle:hover {
+	background-color: #fff;
+	border-width: 0;
+	color: #c3251d;
+}
+
+.menu-toggle {
+	line-height: 22px;
+	position: relative;
+	width: 100%;
+	z-index: 1000;
+}
+
+.menu-toggle,
+.menu-toggle:focus,
+.menu-toggle:hover {
+	border-top: 1px solid #eee;
+}
+
+.menu-toggle::before {
+	font-size: 1.5em;
+	margin-right: 10px;
+	text-rendering: auto;
+}
+
+.sub-menu-toggle {
+	float: right;
+	padding: 13px 10px;
+	position: absolute;
+	right: 0;
+	top: 0;
+	z-index: 100;
+}
+
+.sub-menu .sub-menu-toggle {
+	padding: 12px 10px;
+}
+
+.sub-menu-toggle::before {
+	display: inline-block;
+	text-rendering: auto;
+	-webkit-transform: rotate( 0 );
+	-ms-transform:     rotate( 0 );
+	transform:         rotate( 0 );
+	-webkit-transition: transform .25s ease-in-out;
+	-ms-transition:     transform .25s ease-in-out;
+	transition:         transform .25s ease-in-out;
+}
+
+.sub-menu-toggle.activated::before {
+	-webkit-transform: rotate( 180deg );
+	-ms-transform:     rotate( 180deg );
+	transform:         rotate( 180deg );
+}
+
+.genesis-responsive-menu .genesis-nav-menu .menu-item {
+	display: block;
+	float: none;
+	position: relative;
+	text-align: left;
+}
+
+.genesis-responsive-menu .genesis-nav-menu .menu-item:focus,
+.genesis-responsive-menu .genesis-nav-menu .menu-item:hover {
+	position: relative;
+}
+
+.genesis-responsive-menu .genesis-nav-menu .menu-item a {
+	border: none;
+	margin-bottom: 1px;
+	padding: 15px 20px;
+	width: 100%;
+}
+
+.genesis-responsive-menu .genesis-nav-menu .sub-menu {
+	border: none;
+}
+
+.genesis-responsive-menu .genesis-nav-menu .menu-item > a:focus ul.sub-menu,
+.genesis-responsive-menu .genesis-nav-menu .menu-item > a:focus ul.sub-menu .sub-menu {
+	left: 0;
+	margin-left: 0;
+}
+
+.genesis-responsive-menu .genesis-nav-menu > .menu-item-has-children > a::after {
+	content: none;
+}
+
+.genesis-responsive-menu .genesis-nav-menu .sub-menu {
+	clear: both;
+	display: none;
+	margin: 0;
+	opacity: 1;
+	padding-left: 15px;
+	position: static;
+	width: 100%;
+}
+
+.genesis-responsive-menu .genesis-nav-menu .sub-menu .sub-menu {
+	margin: 0;
 }
 
 
-	.menu-toggle,
-	.sub-menu-toggle {
-		border-width: 0;
-		background-color: #fff;
-		color: #333;
-		display: block;
-		margin: 0 auto;
-		overflow: hidden;
-		text-align: center;
-		visibility: visible;
-	}
+@media only screen and (min-width: 767px) {
 
-	.sub-menu-toggle:hover,
-	.sub-menu-toggle:focus {
-		border-width: 0;
-	}
-
-	.menu-toggle {
-		border-top: 1px solid #eee;
-		line-height: 20px;
-		position: relative;
-		right: 0;
-		z-index: 1000;
-		width: 100%;
-	}
-
-	.site-header .menu-toggle {
-		border: 0;
-	}
-
-	.menu-toggle:before,
-	.menu-toggle.activated:before {
-		margin-right: 10px;
-		text-rendering: auto;
-		-webkit-transform: translate(0, 0);
-		-ms-transform:     translate(0, 0);
-		transform:         translate(0, 0);
-	}
-
-	.sub-menu-toggle {
-		float: right;
-		padding: 10px;
-		position: absolute;
-		right: 0;
-		top: 0;
-		z-index: 100;
-	}
-
-	.sub-menu-toggle:before {
-		display: inline-block;
-		text-rendering: auto;
-		-webkit-transform: translate(0, 0);
-		-ms-transform:     translate(0, 0);
-		transform:         translate(0, 0);
-	}
-
-	.sub-menu-toggle.activated:before {
-		content: "\f142";
-	}
-
-	.js .nav-primary .genesis-nav-menu .menu-item,
-	.js .site-header .genesis-nav-menu .menu-item {
-		display: block;
-		float: none;
-		margin: 1px 0;
-		position: relative;
-		text-align: left;
-	}
-
-	.js .genesis-nav-menu .menu-item:hover {
-		position: relative;
-	}
-
-	.js .nav-primary .genesis-nav-menu .menu-item a,
-	.js .site-header .genesis-nav-menu .menu-item a {
-		border: none;
-		padding: 12px 0;
-		width: 100%;
-	}
-
-	.js .genesis-nav-menu .sub-menu {
-		border: none;
-	}
-
-	.js .genesis-nav-menu .menu-item > a:focus ul.sub-menu,
-	.js .genesis-nav-menu .menu-item > a:focus ul.sub-menu .sub-menu {
-		left: 0;
-		margin-left: 0;
-	}
-
-	.js .genesis-nav-menu > .menu-item-has-children > a:after {
-		content: none;
-	}
-
-	.js .genesis-nav-menu .sub-menu {
-		clear: both;
-		display: none;
-		margin: 0;
-		opacity: 1;
-		padding-left: 15px;
-		position: static;
-		width: 100%;
-	}
-
-	.js .genesis-nav-menu .sub-menu .sub-menu {
-		margin: 0;
-	}
-
-	.js nav button:hover,
-	.js .menu-toggle:hover,
-	.js .nav-primary {
-		background-color: #fff;
-		color: #000;
-	}
-
-	.js nav button:focus,
-	.js .menu-toggle:focus {
-		background-color: #fff;
-		color: #c3251d;
-	}
-
-
-@media only screen and (min-width: 768px) {
-	.sub-menu-toggle,
-	.menu-toggle {
-		display: none;
-		visibility: hidden;
-	}
-
-	.js nav.nav-primary,
-	.js .site-header nav  {
+        .genesis-responsive-menu {
 		display: block;
 		position: relative;
 	}
 
-	.js .nav-primary .genesis-nav-menu .menu-item,
-	.js .site-header .genesis-nav-menu .menu-item {
-		display: inline-block;
-		margin: 0;
-	}
+        /* # Site Navigation
+        ---------------------------------------------------------------------------------------------------- */
 
-	.js .nav-primary .genesis-nav-menu .menu-item a,
-	.js .site-header .genesis-nav-menu .menu-item a {
-		padding: 12px;
-	}
+        .genesis-responsive-menu .genesis-nav-menu {
+        	clear: both;
+        	font-size: 16px;
+        	line-height: 1;
+        	width: 100%;
+        }
 
-	.js .nav-primary .genesis-nav-menu li:last-child > a,
-	.js .site-header .genesis-nav-menu li:last-child > a {
-		padding-right: 0;
-	}
-
-	.js .nav-primary .genesis-nav-menu .sub-menu,
-	.js .site-header .genesis-nav-menu .sub-menu {
-    border-top: 1px solid #eee;
-    left: -9999px;
-    opacity: 0;
-    position: absolute;
-    -webkit-transition: opacity .4s ease-in-out;
-    -moz-transition: opacity .4s ease-in-out;
-    -ms-transition: opacity .4s ease-in-out;
-    -o-transition: opacity .4s ease-in-out;
-    transition: opacity .4s ease-in-out;
-    width: 200px;
-    z-index: 99;
-	}
-
-	.js .nav-primary .genesis-nav-menu .sub-menu a,
-	.js .site-header  .genesis-nav-menu .sub-menu a {
-		background-color: #fff;
-		border: 1px solid #eee;
-		border-top: 0;
-		font-size: 14px;
-		padding: 20px;
-		position: relative;
-		width: 200px;
-		word-wrap: break-word;
-	}
+        .genesis-responsive-menu .genesis-nav-menu .menu-item {
+        	display: inline-block;
+        	margin-bottom: 0;
+        	padding-bottom: 0;
+        	text-align: left;
+        }
 
 
-	.js .nav-primary .genesis-nav-menu .sub-menu .sub-menu,
-	.js .site-header .genesis-nav-menu .sub-menu .sub-menu {
-		margin: -56px 0 0 199px;
-	}
+        .genesis-responsive-menu .genesis-nav-menu a {
+        	color: #333;
+        	display: block;
+        	padding: 32px 20px;
+        	text-decoration: none;
+        }
 
-	.js .nav-primary .genesis-nav-menu .menu-item:hover > .sub-menu,
-	.js .site-header .genesis-nav-menu .menu-item:hover > .sub-menu  {
-		left: auto;
-		opacity: 1;
-	}
+        .genesis-responsive-menu .genesis-nav-menu a:focus,
+        .genesis-responsive-menu .genesis-nav-menu a:hover,
+        .genesis-responsive-menu .genesis-nav-menu .current-menu-item > a,
+        .genesis-responsive-menu .genesis-nav-menu .sub-menu .current-menu-item > a:focus,
+        .genesis-responsive-menu .genesis-nav-menu .sub-menu .current-menu-item > a:hover  {
+        	color: #c3251d;
+        }
 
-	.js .genesis-nav-menu .sub-menu {
-		padding-left: 0;
-	}
+        .genesis-responsive-menu .genesis-nav-menu .sub-menu {
+        	border-top: 1px solid #eee;
+        	left: -9999px;
+        	opacity: 0;
+        	position: absolute;
+                padding-left: 0;
+        	-webkit-transition: opacity .4s ease-in-out;
+        	-moz-transition:    opacity .4s ease-in-out;
+        	-ms-transition:     opacity .4s ease-in-out;
+        	-o-transition:      opacity .4s ease-in-out;
+        	transition:         opacity .4s ease-in-out;
+        	width: 200px;
+        	z-index: 99;
+        }
 
+        .genesis-responsive-menu .genesis-nav-menu .sub-menu a {
+        	background-color: #fff;
+        	border: 1px solid #eee;
+        	border-top: 0;
+        	font-size: 14px;
+        	font-size: 1.4rem;
+        	padding: 15px;
+        	position: relative;
+        	width: 200px;
+        	word-wrap: break-word;
+        }
 
+        .genesis-responsive-menu .genesis-nav-menu .sub-menu .sub-menu {
+                margin: -48px 0 0 199px;
+        }
 
+        .genesis-responsive-menu .genesis-nav-menu .menu-item:hover {
+        	position: static;
+        }
+
+        .genesis-responsive-menu .genesis-nav-menu .menu-item:hover > .sub-menu {
+        	left: auto;
+        	opacity: 1;
+        }
+
+        .genesis-responsive-menu .genesis-nav-menu > .first > a {
+        	padding-left: 0;
+        }
+
+        .genesis-responsive-menu .genesis-nav-menu > .last > a {
+        	padding-right: 0;
+        }
+
+        .genesis-responsive-menu .genesis-nav-menu > .right {
+        	float: right;
+        }
+
+        /* ## Accessible Menu
+        --------------------------------------------- */
+
+        .genesis-responsive-menu .menu .menu-item:focus {
+        	position: static;
+        }
+
+        .genesis-responsive-menu .menu .menu-item > a:focus + ul.sub-menu,
+        .genesis-responsive-menu .menu .menu-item.sfHover > ul.sub-menu {
+        	left: auto;
+        	opacity: 1;
+        }
+
+        .menu-toggle,
+        .sub-menu-toggle {
+        	display: none;
+        	visibility: hidden;
+        }
+
+        /* ## Site Header Navigation
+        --------------------------------------------- */
+
+        .site-header .genesis-responsive-menu .genesis-nav-menu li li {
+        	margin-left: 0;
+        }
+
+        /* ## After Header Navigation
+        --------------------------------------------- */
+
+        .nav-primary {
+        	background-color: #fff;
+        }
+
+        /* ## Footer Navigation
+        --------------------------------------------- */
+
+        .site-footer .genesis-responsive-menu  .genesis-nav-menu {
+        	padding-bottom: 20px;
+        }
+
+        .site-footer .genesis-responsive-menu  .genesis-nav-menu a {
+        	padding: 0 20px 10px;
+        }
 }
 
 @media only screen and (min-width: 1200px) {
-	.js .nav-primary .genesis-nav-menu .menu-item a,
-	.js .site-header .genesis-nav-menu .menu-item a {
-		padding: 30px 24px;
-	}
-	.js .nav-primary .genesis-nav-menu .sub-menu a,
-	.js .site-header .genesis-nav-menu .sub-menu a {
-		padding: 20px;
-	}
+
+        .genesis-responsive-menu .genesis-nav-menu .menu-item a {
+                padding: 30px 24px;
+        }
+
+        .genesis-responsive-menu .genesis-nav-menu .sub-menu a {
+                padding: 20px;
+        }
+
+        .genesis-responsive-menu .genesis-nav-menu .sub-menu .sub-menu {
+                margin: -57px 0 0 199px;
+        }
 }
