--- a/style.css
+++ b/style.css
@@ -1060,6 +1060,14 @@ img.alignright,
 	font-size: 16px;
 	font-size:1.6rem;
 	line-height: 1;
+	width: 100%;
+}
+
+.genesis-nav-menu .menu-item {
+	display: inline-block;
+	margin-bottom: 0;
+	padding-bottom: 0;
+	text-align: left;
 }
 
 .genesis-nav-menu a {
@@ -1067,10 +1075,7 @@ img.alignright,
 	display: block;
 }
 
-.genesis-nav-menu .menu-item {
-	display: inline-block;
-	text-align: left;
-}
+
 
 .genesis-nav-menu a:hover,
 .genesis-nav-menu a:focus,
@@ -1081,6 +1086,7 @@ img.alignright,
 }
 
 .genesis-nav-menu .sub-menu {
+	border-top: 1px solid #eee;
 	left: -9999px;
 	opacity: 0;
 	position: absolute;
@@ -1121,6 +1127,10 @@ img.alignright,
 
 .genesis-nav-menu > .last > a {
 	padding-right: 0;
+}
+
+.genesis-nav-menu > .right {
+	float: right;
 }
 
 .genesis-nav-menu a,
@@ -2103,11 +2113,10 @@ Business Profile
 		width: 27%; /*400px*/
 	}
 
-
 	/* Menu Spacing
 	--------------------------------------------- */
 
-	.genesis-nav-menu a {
+	.genesis-nav-menu .menu-item a {
 		padding: 30px 24px;
 	}
 
