WooCommerce enhancements, set up, theme supports, flexbox

--- a/includes/woocommerce/woo.css
+++ b/includes/woocommerce/woo.css
@@ -83,3 +83,21 @@
 	padding: 10px;
 	font-size: 16px;
 }
+
+/* Flexbox on WooCommerce archive products */
+.woocommerce .products ul,
+.woocommerce ul.products {
+	display: flex;
+	flex-flow: row wrap;
+}
+
+.woocommerce ul.products li.product,
+.woocommerce-page ul.products li.product {
+	display: flex;
+	flex-flow: column nowrap;
+}
+
+.woocommerce ul.products li.product .button {
+	margin-top: auto;
+	display: table;
+}
