--- a/css/responsive-menu.css
+++ b/css/responsive-menu.css
@@ -58,6 +58,11 @@
 	z-index: 1000;
 }
 
+.menu-toggle,
+.menu-toggle:focus,
+.menu-toggle:hover {
+	border-top: 1px solid #eee;
+}
 
 .menu-toggle::before {
 	font-size: 1.5em;
@@ -231,10 +236,6 @@
         	padding-right: 0;
         }
 
-        .genesis-responsive-menu .genesis-nav-menu li:last-child > a {
-                padding-right: 0;
-        }
-
         .genesis-responsive-menu .genesis-nav-menu > .right {
         	float: right;
         }
@@ -290,7 +291,9 @@
                 padding: 30px 24px;
         }
 
-
+        .genesis-responsive-menu .genesis-nav-menu li:last-child > a {
+                padding-right: 0;
+        }
 
         .genesis-responsive-menu .genesis-nav-menu .sub-menu a {
                 padding: 20px;
