New client file to make backendmore attractive

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: GenesisChild-mobile-first
 Theme URI: https://github.com/neilgee/genesischild-mobile-first
 Description: GenesisChild Mobile First is a Genesis base starter theme created for Genesis Framework
 Author: Neil Gowran
-Author URI: http://www.wpbeaches.com
+Author URI: https://www.wpbeaches.com
 Version: 3.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
